--- a/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
+++ b/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
@@ -1,4 +1,7 @@
 {{rammap|game=Dragon Quest III}}
+{{subpage|Events}}
+{{subpage|Treasures}}
+
 ==Main==
 
 {| class="wikitable sortable"
@@ -116,7 +119,11 @@ The whole graphics state is set every VBLANK interrupt. This is also where VRAM 
 |  Graphics Loading  ||  $7faeea - $7fb0e9  ||  $100 words  ||  ↔️ Tile indexes, which tiles to copy, used to fill the DMA copy scheduler data in $7e8bae - $7e93ae
 |}
 
-==Game Events==
+==Game Event Flags==
+
+===Events===
+
+[[Dragon Quest III (SNES)/RAM map/Events]]
 
 ===Treasures===
 
